@@ -8,7 +8,15 @@
 The Logback ruby gem packages the Logback[http://logback.qos.ch/] java log
 writer, and provides a JRuby facade for programmatic Logback
 setup. Logback implements the SLF4J[http://www.slf4j.org/] SPI
-packaged in the slf4j gem.
+packaged in the {slf4j gem}[http://rjack.rubyforge.org/slf4j/].
+
+== Synopsis
+
+  require 'rjack-logback'
+  RJack::Logback.config_console( :level => Logback:INFO )
+
+  log = RJack::SLF4J[ "my.app.logger" ]
+  log.info "Hello World!"
 
 == License
 
@@ -17,20 +25,22 @@ packaged in the slf4j gem.
 Copyright (c) 2008-2009 David Kellum
 
 rjack-logback is free software: you can redistribute it and/or
-modify it under the terms of the
-{GNU Lesser General Public License}[http://www.gnu.org/licenses/lgpl.html]
-as published by the Free Software Foundation, either version 3 of the
-License, or (at your option) any later version.
+modify it under the terms of either of following licenses:
+
+* {GNU Lesser General Public License}[http://www.gnu.org/licenses/lgpl.html]
+  v3 or later
+* {Eclipse Public License v1.0}[http://www.eclipse.org/legal/epl-v10.html]
 
 rjack-logback is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-Lesser General Public License for more details.
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 === Logback (java)
 
-Copyright (c) 2000-2008, QOS.ch
+Copyright (c) 1999-2009, QOS.ch
 
-This library is free software, you can redistribute it and/or modify
-it under the terms of the GNU Lesser General Public License as
+This program and the accompanying materials are dual-licensed under
+either the terms of the Eclipse Public License v1.0 as published by
+the Eclipse Foundation or (per the licensee's choosing) under the
+terms of the GNU Lesser General Public License version 2.1 as
 published by the Free Software Foundation.
