@@ -3,15 +3,14 @@
 # Copyright (C) 2008-2009 David Kellum
 #
 # rjack-logback is free software: you can redistribute it and/or
-# modify it under the terms of the
-# {GNU Lesser General Public License}[http://www.gnu.org/licenses/lgpl.html]
-# as published by the Free Software Foundation, either version 3 of the
-# License, or (at your option) any later version.
+# modify it under the terms of either of following licenses:
+#
+#   GNU Lesser General Public License v3 or later
+#   Eclipse Public License v1.0
 #
 # rjack-logback is distributed in the hope that it will be useful, but
 # WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# Lesser General Public License for more details.
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 #++
 
 require 'rubygems'
